--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
+    "@types/plotly.js": "^2.12.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-plotly.js": "^2.6.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
