--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
